--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <nav class="navbar">
                 
               <ul class="">
-                <li><a href="../clock/index.html">Clock</a></li>
-                <li><a href="../clock/timer.html">timer</a></li>
-                <li><a href="../clock/stopwatch.html">stop-watch</a></li>
+                <li><a href="/clock/index.html">Clock</a></li>
+                <li><a href="/clock/timer.html">timer</a></li>
+                <li><a href="/clock/stopwatch.html">stop-watch</a></li>
                 
                 <!-- <li><a href="#">Contact</a></li> -->
               </ul>
